--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		</article>
 
 		<footer>
-			<p>&copy; 2012 Mel Choyce <span>|</span> <a href="mailto:melissachoyce@gmail.com">melissachoyce@gmail.com</a> <span>|</span> <a href="https://twitter.com/melchoyce">@melchoyce</a>
+			<p>&copy; 2012 Mel Choyce <span>|</span> <a href="https://twitter.com/melchoyce">@melchoyce</a>
 		</footer>
 
         <!-- Additional js -->
